# endstone_op_lock

./: README.md  pyproject.toml
.github/workflows/: build.yml
src/endstone_op_lock/: __init__.py  config.toml  op_lock.py
