[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-op-lock"
version = "0.1.0"
dependencies = []
authors = [
    { name = "Endstone Developers", email = "hello@endstone.dev" },
    { name = "Huang FTS427", email = "FTS427@outlook.com" },
]
description = "Lock op"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin"]

[project.urls]
Homepage = "https://github.com/ZH-Server/endstone_op_lock/"

[project.entry-points."endstone"]
op-lock = "endstone_op_lock:OpLock"